--- a/WordArena/desktop/.project
+++ b/WordArena/desktop/.project
@@ -1,24 +1,32 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
 	<name>WordArena-desktop</name>
-	<comment></comment>
-	<projects>
-	</projects>
-	<buildSpec>
-		<buildCommand>
-			<name>org.eclipse.jdt.core.javabuilder</name>
-			<arguments>
-			</arguments>
-		</buildCommand>
-	</buildSpec>
+	<comment/>
+	<projects/>
 	<natures>
 		<nature>org.eclipse.jdt.core.javanature</nature>
 	</natures>
+	<buildSpec>
+		<buildCommand>
+			<name>org.eclipse.jdt.core.javabuilder</name>
+			<arguments/>
+		</buildCommand>
+	</buildSpec>
 	<linkedResources>
 		<link>
 			<name>assets</name>
 			<type>2</type>
 			<locationURI>PARENT-1-PROJECT_LOC/android/assets</locationURI>
+		</link>
+		<link>
+			<name>assets</name>
+			<type>2</type>
+			<location>PARENT-1-PROJECT_LOC/android/assets</location>
+		</link>
+		<link>
+			<name>assets</name>
+			<type>2</type>
+			<location>PARENT-1-PROJECT_LOC/android/assets</location>
 		</link>
 	</linkedResources>
 </projectDescription>
