--- a/WordArena/html/.settings/org.eclipse.jdt.core.prefs
+++ b/WordArena/html/.settings/org.eclipse.jdt.core.prefs
@@ -1,5 +1,5 @@
 #
-#Sun Aug 10 16:41:28 CEST 2014
+#Tue Nov 04 20:46:23 CET 2014
 org.eclipse.jdt.core.compiler.debug.localVariable=generate
 org.eclipse.jdt.core.compiler.compliance=1.6
 org.eclipse.jdt.core.compiler.codegen.unusedLocal=preserve
