--- a/trunk/WordArena/html/.settings/com.google.gdt.eclipse.core.prefs
+++ b/trunk/WordArena/html/.settings/com.google.gdt.eclipse.core.prefs
@@ -1,5 +1,5 @@
-#Sun Aug 10 16:41:28 CEST 2014
+#Tue Nov 04 20:24:52 CET 2014
 warSrcDir=webapp/
-lastWarOutDir=C\:\\Progz\\dev\\LibGDX\\WordArena\\html\\war
+lastWarOutDir=D\:\\Dev\\Slamdunk.Prototypes\\WordArena\\html\\war
 eclipse.preferences.version=1
 warSrcDirIsOutput=false
