--- a/trunk/WordArena/ios/.settings/org.eclipse.jdt.core.prefs
+++ b/trunk/WordArena/ios/.settings/org.eclipse.jdt.core.prefs
@@ -1,5 +1,5 @@
 #
-#Sun Aug 10 16:41:30 CEST 2014
+#Tue Nov 04 20:46:26 CET 2014
 org.eclipse.jdt.core.compiler.debug.localVariable=generate
 org.eclipse.jdt.core.compiler.compliance=1.7
 org.eclipse.jdt.core.compiler.codegen.unusedLocal=preserve
