--- a/trunk/WordArena/android/.classpath
+++ b/trunk/WordArena/android/.classpath
@@ -1,15 +1,13 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
 	<classpathentry kind="src" path="src"/>
-	<classpathentry kind="con" path="com.android.ide.eclipse.adt.ANDROID_FRAMEWORK" exported="true"/>
-	<classpathentry kind="con" path="com.android.ide.eclipse.adt.LIBRARIES" exported="true"/>
-	<classpathentry kind="con" path="com.android.ide.eclipse.adt.DEPENDENCIES" exported="true"/>
+	<classpathentry exported="true" kind="con" path="com.android.ide.eclipse.adt.ANDROID_FRAMEWORK"/>
+	<classpathentry exported="true" kind="con" path="com.android.ide.eclipse.adt.LIBRARIES"/>
+	<classpathentry exported="true" kind="con" path="com.android.ide.eclipse.adt.DEPENDENCIES"/>
 	<classpathentry kind="src" path="gen"/>
-	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER" exported="true"/>
+	<classpathentry exported="true" kind="src" path="/WordArena-core"/>
+	<classpathentry exported="true" kind="lib" path="C:/Documents and Settings/Yed/.gradle/caches/modules-2/files-2.1/com.badlogicgames.gdx/gdx-backend-android/1.3.0/cffac0ca563a28d977523494c33b6daa4de8a357/gdx-backend-android-1.3.0.jar" sourcepath="C:/Documents and Settings/Yed/.gradle/caches/modules-2/files-2.1/com.badlogicgames.gdx/gdx-backend-android/1.3.0/6c058bccbb2dd469a73324aae6776ae010f0a643/gdx-backend-android-1.3.0-sources.jar"/>
+	<classpathentry exported="true" kind="lib" path="C:/Documents and Settings/Yed/.gradle/caches/modules-2/files-2.1/com.badlogicgames.gdx/gdx-box2d/1.3.0/bd6549261f39d3caa1ecec606013df3506f8aead/gdx-box2d-1.3.0.jar" sourcepath="C:/Documents and Settings/Yed/.gradle/caches/modules-2/files-2.1/com.badlogicgames.gdx/gdx-box2d/1.3.0/ff1eda657dada34d4e79cac96dbc0a15242ef60f/gdx-box2d-1.3.0-sources.jar"/>
+	<classpathentry exported="true" kind="lib" path="C:/Documents and Settings/Yed/.gradle/caches/modules-2/files-2.1/com.badlogicgames.gdx/gdx/1.3.0/765fbbc5489f7ddc346c6a39397d41cd2682b80c/gdx-1.3.0.jar" sourcepath="C:/Documents and Settings/Yed/.gradle/caches/modules-2/files-2.1/com.badlogicgames.gdx/gdx/1.3.0/36f3fcea64d2b1033a959bc5e73bbd54d8f7d8a7/gdx-1.3.0-sources.jar"/>
 	<classpathentry kind="output" path="bin/classes"/>
-	<classpathentry kind="output" path="bin"/>
-	<classpathentry kind="src" path="/WordArena-core" exported="true"/>
-	<classpathentry sourcepath="C:/Documents and Settings/Yed/.gradle/caches/modules-2/files-2.1/com.badlogicgames.gdx/gdx-backend-android/1.3.0/6c058bccbb2dd469a73324aae6776ae010f0a643/gdx-backend-android-1.3.0-sources.jar" kind="lib" path="C:/Documents and Settings/Yed/.gradle/caches/modules-2/files-2.1/com.badlogicgames.gdx/gdx-backend-android/1.3.0/cffac0ca563a28d977523494c33b6daa4de8a357/gdx-backend-android-1.3.0.jar" exported="true"/>
-	<classpathentry sourcepath="C:/Documents and Settings/Yed/.gradle/caches/modules-2/files-2.1/com.badlogicgames.gdx/gdx-box2d/1.3.0/ff1eda657dada34d4e79cac96dbc0a15242ef60f/gdx-box2d-1.3.0-sources.jar" kind="lib" path="C:/Documents and Settings/Yed/.gradle/caches/modules-2/files-2.1/com.badlogicgames.gdx/gdx-box2d/1.3.0/bd6549261f39d3caa1ecec606013df3506f8aead/gdx-box2d-1.3.0.jar" exported="true"/>
-	<classpathentry sourcepath="C:/Documents and Settings/Yed/.gradle/caches/modules-2/files-2.1/com.badlogicgames.gdx/gdx/1.3.0/36f3fcea64d2b1033a959bc5e73bbd54d8f7d8a7/gdx-1.3.0-sources.jar" kind="lib" path="C:/Documents and Settings/Yed/.gradle/caches/modules-2/files-2.1/com.badlogicgames.gdx/gdx/1.3.0/765fbbc5489f7ddc346c6a39397d41cd2682b80c/gdx-1.3.0.jar" exported="true"/>
 </classpath>
