--- a/trunk/WordArena/html/.settings/com.google.gdt.eclipse.core.prefs
+++ b/trunk/WordArena/html/.settings/com.google.gdt.eclipse.core.prefs
@@ -1,5 +1,5 @@
-#Tue Nov 04 20:24:52 CET 2014
+#Sat Nov 08 10:03:42 CET 2014
 warSrcDir=webapp/
-lastWarOutDir=D\:\\Dev\\Slamdunk.Prototypes\\WordArena\\html\\war
+lastWarOutDir=E\:\\Projets\\Programmes\\slamdunk-prototypes\\WordArena\\html\\war
 eclipse.preferences.version=1
 warSrcDirIsOutput=false
