--- a/WordArena/html/.settings/com.google.gdt.eclipse.core.prefs
+++ b/WordArena/html/.settings/com.google.gdt.eclipse.core.prefs
@@ -1,5 +1,5 @@
-#Sat Nov 08 10:03:42 CET 2014
+#Tue Nov 11 22:30:54 CET 2014
 warSrcDir=webapp/
-lastWarOutDir=E\:\\Projets\\Programmes\\slamdunk-prototypes\\WordArena\\html\\war
+lastWarOutDir=D\:\\Dev\\Slamdunk.Prototypes\\WordArena\\html\\war
 eclipse.preferences.version=1
 warSrcDirIsOutput=false
