--- a/trunk/WordArena/android/assets/battlefields/0.properties
+++ b/trunk/WordArena/android/assets/battlefields/0.properties
@@ -7,7 +7,8 @@ worldPosition.x = 193.572
 worldPosition.y = 183.571
 
 # Tilemap
-map = tiledmaps/game.tmx
+#map = tiledmaps/game.tmx
+map = maps/battlefield0.png
 
 # Type de bataille. Utilisé pour l'icône mais aussi pour savoir quel type de partie lancer
 objective = ELIMINATION
