--- a/trunk/WordArena/android/assets/battlefields/0.properties
+++ b/trunk/WordArena/android/assets/battlefields/0.properties
@@ -6,9 +6,10 @@ name.en = Test mission
 worldPosition.x = 193.572
 worldPosition.y = 183.571
 
-# Tilemap
-#map = tiledmaps/game.tmx
-map = maps/battlefield0.png
+# Infos de cartographie
+background = maps/battlefield0.png
+data = battlefields/battlefield0.svg
+
 
 # Type de bataille. Utilisé pour l'icône mais aussi pour savoir quel type de partie lancer
 objective = ELIMINATION
