ADD : Plan d'arène supplémentaire MOD : Renommer cell weight en cell power MOD : Suppression du mot AVOIRDUPOIDS dans la liste des mots

--- a/WordArena/android/assets/arenas/0.properties
+++ b/WordArena/android/assets/arenas/0.properties
@@ -26,7 +26,7 @@ plan.letters = \
 	- - - - - - - \
 	- - - - - - - \
 	- - - - - - -
-plan.weights = \
+plan.powers = \
 	1 1 1 0 1 1 1 \
 	1 1 1 1 1 1 1 \
 	1 1 1 1 1 1 1 \
