--- a/trunk/WordArena/android/assets/arenas/0.properties
+++ b/trunk/WordArena/android/assets/arenas/0.properties
@@ -26,7 +26,7 @@ plan.letters = \
 	- - - - - - - \
 	- - - - - - - \
 	- - - - - - -
-plan.weights = \
+plan.powers = \
 	1 1 1 0 1 1 1 \
 	1 1 1 1 1 1 1 \
 	1 1 1 1 1 1 1 \
