ADD : Arène 2 FIX : Déplacer la caméra ne permet pas de voir l'extrémité des longues arènes

--- a/WordArena/android/assets/arenas/1.properties
+++ b/WordArena/android/assets/arenas/1.properties
@@ -1,6 +1,6 @@
 # Nom de l'arène
-name.fr = Premier assaut
-name.en = First assault
+name.fr = Tour d'ivoire
+name.en = Ivory tower
 
 # Type de l'arène
 type = CONQUEST
