--- a/trunk/WordArena/android/assets/arenas/1.properties
+++ b/trunk/WordArena/android/assets/arenas/1.properties
@@ -1,6 +1,6 @@
 # Nom de l'arène
-name.fr = Premier assaut
-name.en = First assault
+name.fr = Tour d'ivoire
+name.en = Ivory tower
 
 # Type de l'arène
 type = CONQUEST
