--- a/WordArena/build.gradle
+++ b/WordArena/build.gradle
@@ -102,6 +102,7 @@ project(":core") {
         compile "com.badlogicgames.gdx:gdx:$gdxVersion"
         compile "com.badlogicgames.gdx:gdx-box2d:$gdxVersion"
         compile "com.badlogicgames.ashley:ashley:1.3.2"
+		compile "com.underwaterapps.overlap2druntime:overlap2d-runtime-libgdx:0.0.8"
     }
 }
 
