--- a/trunk/WordArena/android/assets/arenas/2_trench_warfare.properties
+++ b/trunk/WordArena/android/assets/arenas/2_trench_warfare.properties
@@ -1,6 +1,6 @@
 # Nom de l'arène
-name.fr = 
-name.en = 
+name.fr = Guerre de tranchées
+name.en = Trench warfare
 
 # Type de l'arène
 type = CONQUEST
