ADD : Internationalisation et localisation

--- a/WordArena/android/assets/arenas/2_trench_warfare.properties
+++ b/WordArena/android/assets/arenas/2_trench_warfare.properties
@@ -1,6 +1,5 @@
-# Nom de l'arène
-name.fr = Guerre de tranchées
-name.en = Trench warfare
+# Indice de l'arène, utilisé notamment pour récupérer son nom dans le bundle i18n
+index = 2
 
 # Type de l'arène
 type = CONQUEST
