--- a/WordArena/android/assets/arenas/0_first_assault.properties
+++ b/WordArena/android/assets/arenas/0_first_assault.properties
@@ -1,6 +1,5 @@
-# Nom de l'arène
-name.fr = Premier assaut
-name.en = First assault
+# Indice de l'arène, utilisé notamment pour récupérer son nom dans le bundle i18n
+index = 0
 
 # Type de l'arène
 type = CONQUEST
