--- a/trunk/WordArena/android/assets/arenas/1_ivory_tower.properties
+++ b/trunk/WordArena/android/assets/arenas/1_ivory_tower.properties
@@ -1,6 +1,5 @@
-# Nom de l'arène
-name.fr = Tour d'ivoire
-name.en = Ivory tower
+# Indice de l'arène, utilisé notamment pour récupérer son nom dans le bundle i18n
+index = 1
 
 # Type de l'arène
 type = CONQUEST
