--- a/trunk/WordArena/android/assets/arenas/3_diamond.properties
+++ b/trunk/WordArena/android/assets/arenas/3_diamond.properties
@@ -1,6 +1,5 @@
-# Nom de l'arène
-name.fr = Diamant
-name.en = Diamond
+# Indice de l'arène, utilisé notamment pour récupérer son nom dans le bundle i18n
+index = 3
 
 # Type de l'arène
 type = CONQUEST
