--- a/trunk/WordArena/android/assets/arenas/1_ivory_tower.properties
+++ b/trunk/WordArena/android/assets/arenas/1_ivory_tower.properties
@@ -1,14 +1,14 @@
-# Indice de l'arène, utilisé notamment pour récupérer son nom dans le bundle i18n
+# Indice de l'arÃ¨ne, utilisÃ© notamment pour rÃ©cupÃ©rer son nom dans le bundle i18n
 index = 1
 
-# Type de l'arène
+# Type de l'arÃ¨ne
 type = CONQUEST
 
-# Taille de l'arène
+# Taille de l'arÃ¨ne
 size.width = 9
 size.height = 9
 
-# Structure de l'arène
+# Structure de l'arÃ¨ne
 plan.types = \
 	L L L L L L L L L \
 	L L L L L L L L L \
